# assistant

./: .env.example  .gitignore  ACTION_PALETTE_DECISION.md  CMakeLists.txt  JOURNAL_FEATURE_NOTES.md  KANBAN.md  README.md  bulk_import.ts  electron.vite.config.ts  lobotomize.sh  package-lock.json  package.json  tsconfig.cli.json  tsconfig.electron.json  tsconfig.json
.github/workflows/: build.yml  release.yml
config/: config.yaml
migrations/: 2_add_task_details.js
prisma/: assistant.db  schema.prisma
prisma/migrations/20250728005022_initial/: migration.sql
prisma/migrations/20250728012850_add_task_fields/: migration.sql
prisma/prisma/: assistant.db
projects/: this_is_the_title.yml  this_is_the_title_knowledge.json
src/: AIManager.ts  AuthManager.ts  CMakeLists.txt  CalendarManager.ts  ChatManager.ts  Config.ts  DatabaseManager.ts  EditorInteraction.ts  FileManager.ts  GoogleAuthService.ts  HorizonsManager.ts  JournalManager.ts  ProjectManager.ts  TextParser.ts  UserInterface.ts  UserState.ts  WebServer.ts  assistant_cli.ts  conversationworkspacewidget.cpp  conversationworkspacewidget.h  datamodels.cpp  datamodels.h  homescreenwidget.cpp  homescreenwidget.h  journal_cli.ts  main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h  settingsmanager.cpp  settingsmanager.h  types.ts
src/main/: index.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.vue  env.d.ts  main.ts
src/renderer/src/components/: ActionConfirmationCard.vue  ActionDialog.vue  ActionPalette.vue  Calendar.vue  CalendarList.vue  CalendarSelectionCard.vue  CalendarView.vue  ChatInterface.vue  ConfirmationDialog.vue  CreateEventDialog.vue  DayView.vue  EditEventDialog.vue  GenericConfirmationDialog.vue  Goals.vue  ImportView.vue  Journal.vue  KanbanBoard.vue  MiniCalendar.vue  MonthView.vue  NewProjectDialog.vue  OnboardingWizard.vue  Projects.vue  Settings.vue  Sidebar.vue  TaskEditor.vue  Tooltip.vue  ViewSwitcher.vue  WeekView.vue
src/renderer/src/state/: appState.ts
src/types/: googleapis.d.ts
tests/: CMakeLists.txt  CalendarView.spec.ts  test_example.cpp
